2005-10-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/event/EventListenerList.java:
	* javax/swing/event/InternalFrameAdapter.java:
	* javax/swing/event/MouseInputListener.java:
	Reformatted slightly. Filled emtpy blocks with comments. Fixed some
	slight API doc errors

2005-10-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/colorchooser/AbstractColorChooserPanel.java:
	* javax/swing/colorchooser/ColorChooserComponentFactory.java:
	* javax/swing/colorchooser/DefaultSwatchChooserPanel.java:
	Filled empty blocks with comments.

2005-10-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/border/AbstractBorder.java:
	* javax/swing/border/BevelBorder.java:
	* javax/swing/border/Border.java:
	* javax/swing/border/CompoundBorder.java:
	* javax/swing/border/EmptyBorder.java:
	* javax/swing/border/EtchedBorder.java:
	* javax/swing/border/LineBorder.java:
	* javax/swing/border/MatteBorder.java:
	* javax/swing/border/SoftBevelBorder.java:
	* javax/swing/border/TitledBorder.java:
	Reformatted slightly. Filled emtpy blocks with comments. Fixed some
	slight API doc errors

2005-10-18  Lillian Angel  <langel@redhat.com>

	* java/awt/GridBagLayout.java
	(GetLayoutInfo): Added a null check for lastComponent. Prevents
	NPE.

2005-10-18  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTable.java
	(JTable): Moved code around so all models are set before
	any other function is called. Prevents all NPEs with
	models.

2005-10-18  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/DefaultListSelectionModel.java:
	(setLeadSelectionIndex): Avoid index out of bounds error on initial
	call of this method by checking explicitly for oldLeadIndex being -1.
	Also remove unused BitSet newRange and oldRange.
	(moveLeadSelectionIndex): New API method implemented (@since 1.5).
	* javax/swing/plaf/basic/BasicListUI.java:
	(ListAction.actionPerformed): Make code more readable by declaring
	local variables for the actionCommand and for the list's